Minor scss fix for time container alignment and fix for missing module in timezone_date.tsx

--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -157,8 +157,7 @@
 }
 
 .react-datepicker__time-container {
-  display: inline-block;
-  position: relative;
+  float: right;
   border-left: 1px solid $datepicker__border-color;
 
   &--with-today-button {
